<resources>
    <string name="app_name">FactoryApp</string>
    <string name="btn_introd">公司簡介</string>
    <string name="btn_catalog">電子目錄</string>
    <string name="btn_audio">影片</string>
    <string name="btn_agent">代理商</string>
    <string name="btn_query">零件查詢</string>
    <string name="btn_sup">技術支援</string>
    <string name="btn_back">返回</string>
    <string name="btn_search">查詢</string>
    <string name="title_activity_login">Sign in</string>
    <string name="btn_pdf1">鳳凰機系列</string>
    <string name="btn_pdf2">L 機 雙軸延伸拉吹機系列</string>
    <string name="btn_pdf3">廣口機系列</string>
    <string name="btn_pdf4">L機 雙軸延伸拉吹機系列 大容量瓶型</string>
    <string name="btn_pdf5">一段式系列</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."
    </string>
</resources>
