<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.factoryapp.techsup"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_pdf1"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/btn_pdf1" />

    <Button
        android:id="@+id/btn_pdf2"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/btn_pdf2" />

    <Button
        android:id="@+id/btn_pdf3"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/btn_pdf3" />

    <Button
        android:id="@+id/btn_pdf4"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/btn_pdf4" />

    <Button
        android:id="@+id/btn_pdf5"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/btn_pdf5" />
</LinearLayout>
