<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:stretchColumns="*"
    tools:context="com.example.user.factoryapp.MainActivity"
    >
        <TableRow>

            <Button
                android:id="@+id/introd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_introd" />

            <Button
                android:id="@+id/catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_catalog" />
        </TableRow>
        <TableRow>

            <Button
                android:id="@+id/audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_audio" />

            <Button
                android:id="@+id/agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_agent" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_query" />

            <Button
                android:id="@+id/feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_feed" />
        </TableRow>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/chumpower"/>

</TableLayout>
